// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AddFieldForm should render layout correctly 1`] = `
<Form>
  <FormItem
    field={
      Object {
        "code": "name",
        "handler": Object {
          "onChange": [Function],
        },
        "placeholder": "Enter field display name",
        "rules": Object {
          "maxLength": Object {
            "message": "The value should be no longer than 128 characters.",
            "value": 128,
          },
          "pattern": Object {
            "message": "The value should not be empty.",
            "value": /\\^\\(\\?!\\\\s\\*\\$\\)\\.\\+/,
          },
          "required": Object {
            "message": "The value is required.",
            "value": true,
          },
        },
        "type": "string",
      }
    }
    key="name"
    label="Name"
    requiredMark={true}
  />
  <FormItem
    field={
      Object {
        "code": "code",
        "disabled": true,
        "name": "code",
        "placeholder": "Automatically generated field",
        "rules": RequiredValidator {
          "required": Object {
            "message": "The value is required.",
            "value": true,
          },
        },
        "type": "string",
      }
    }
    key="code"
    label="Code"
    requiredMark={true}
  />
  <AddFieldDrawerstyles__CheckboxWrapper
    key="required"
  >
    <FormItem
      field={
        Object {
          "code": "required",
          "defaultValue": false,
          "type": "checkmark",
        }
      }
      key="required"
      label="Required field"
    />
  </AddFieldDrawerstyles__CheckboxWrapper>
  <FormItem
    field={
      Object {
        "code": "fieldType",
        "defaultValue": "string",
        "options": Array [
          Object {
            "text": "Checkbox",
            "tooltip": "Checkbox",
            "value": "checkmark",
          },
          Object {
            "text": "Enumeration",
            "tooltip": "Enumeration",
            "value": "enum",
          },
          Object {
            "text": "List",
            "tooltip": "List",
            "value": "list",
          },
          Object {
            "text": "Key Value Pair",
            "tooltip": "Key Value Pair",
            "value": "pair",
          },
          Object {
            "text": "String",
            "tooltip": "String",
            "value": "string",
          },
          Object {
            "text": "Table",
            "tooltip": "Table",
            "value": "table",
          },
          Object {
            "text": "Date",
            "tooltip": "Date",
            "value": "date",
          },
        ],
        "placeholder": "Select field type",
        "type": "enum",
      }
    }
    key="fieldType"
    label="Field Type"
  />
</Form>
`;

exports[`Component: AddFieldForm should render layout correctly for list of enums 1`] = `
<Form>
  <FormItem
    field={
      Object {
        "code": "name",
        "handler": Object {
          "onChange": [Function],
        },
        "placeholder": "Enter field display name",
        "rules": Object {
          "maxLength": Object {
            "message": "The value should be no longer than 128 characters.",
            "value": 128,
          },
          "pattern": Object {
            "message": "The value should not be empty.",
            "value": /\\^\\(\\?!\\\\s\\*\\$\\)\\.\\+/,
          },
          "required": Object {
            "message": "The value is required.",
            "value": true,
          },
        },
        "type": "string",
      }
    }
    key="name"
    label="Name"
    requiredMark={true}
  />
  <FormItem
    field={
      Object {
        "code": "code",
        "disabled": true,
        "name": "code",
        "placeholder": "Automatically generated field",
        "rules": RequiredValidator {
          "required": Object {
            "message": "The value is required.",
            "value": true,
          },
        },
        "type": "string",
      }
    }
    key="code"
    label="Code"
    requiredMark={true}
  />
  <AddFieldDrawerstyles__CheckboxWrapper
    key="required"
  >
    <FormItem
      field={
        Object {
          "code": "required",
          "defaultValue": false,
          "type": "checkmark",
        }
      }
      key="required"
      label="Required field"
    />
  </AddFieldDrawerstyles__CheckboxWrapper>
  <FormItem
    field={
      Object {
        "code": "fieldType",
        "defaultValue": "string",
        "options": Array [
          Object {
            "text": "Checkbox",
            "tooltip": "Checkbox",
            "value": "checkmark",
          },
          Object {
            "text": "Enumeration",
            "tooltip": "Enumeration",
            "value": "enum",
          },
          Object {
            "text": "List",
            "tooltip": "List",
            "value": "list",
          },
          Object {
            "text": "Key Value Pair",
            "tooltip": "Key Value Pair",
            "value": "pair",
          },
          Object {
            "text": "String",
            "tooltip": "String",
            "value": "string",
          },
          Object {
            "text": "Table",
            "tooltip": "Table",
            "value": "table",
          },
          Object {
            "text": "Date",
            "tooltip": "Date",
            "value": "date",
          },
        ],
        "placeholder": "Select field type",
        "type": "enum",
      }
    }
    key="fieldType"
    label="Field Type"
  />
  <FormItem
    field={
      Object {
        "code": "baseType",
        "defaultValue": "enum",
        "options": Array [
          Object {
            "text": "Checkbox",
            "tooltip": "Checkbox",
            "value": "checkmark",
          },
          Object {
            "text": "Enumeration",
            "tooltip": "Enumeration",
            "value": "enum",
          },
          Object {
            "text": "Key Value Pair",
            "tooltip": "Key Value Pair",
            "value": "pair",
          },
          Object {
            "text": "String",
            "tooltip": "String",
            "value": "string",
          },
          Object {
            "text": "Table",
            "tooltip": "Table",
            "value": "table",
          },
          Object {
            "text": "Date",
            "tooltip": "Date",
            "value": "date",
          },
        ],
        "placeholder": "Select field type for each element in list",
        "type": "enum",
      }
    }
    key="baseType"
    label="Base Type Field"
  />
  <FormItem
    field={
      Object {
        "code": "options",
        "render": [Function],
        "rules": RequiredValidator {
          "required": Object {
            "message": "The value is required.",
            "value": true,
          },
        },
      }
    }
    key="options"
    label="OPTIONS"
    requiredMark={true}
  />
</Form>
`;
